# doc-proofreader-web

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  PRD.md  README.md  README_TEST.md  launch_proofreader.sh  pyproject.toml  streamlit_app.py
doc_proofreader/: __main__.py  chunk_utils.py  cli.py  proofread_document.py  proofread_document_inline.py
doc_proofreader/llm/: __init__.py  base_client.py  client_factory.py  openai_client.py  openrouter_client.py
doc_proofreader/prompts/: system_prompts.py  user_prompts.py
tests/: Baptization28 Sept.docx  Baptization_Test_Doc.docx  test_proofread_document.py
